<resources>
    <string name="app_name">Kiosk Demo</string>
    <string name="exit">Exit</string>
    <string name="click_yellow">Please click on all yellow buttons</string>
    <string name="usb_out">USB unplugged detected</string>
    <string name="usb_in">USB insertion detected</string>
    <string name="face_check_no_support">Only binocular cameras support live detection</string>
    <string name="module_screen">Screen Test</string>
    <string name="module_blur">Blur Test</string>
    <string name="module_sec">Sec Screen Test</string>
    <string name="no_camera0">No visible light cameras detected</string>
    <string name="no_camera1">No infrared camera detected</string>
    <string name="stoping">stoping</string>
    <string name="please_stop">please stop first</string>
    <string name="module_ocr">OCR Test</string>
    <string name="module_ocr_zs">OCR</string>
    <string name="module_cz_card">CZ Card</string>
    <string name="module_camera">Camera Test</string>
    <string name="module_camera_resolution">Resolution Test</string>
    <string name="module_card">Card Test</string>
    <string name="module_face_check">Face Check Test</string>
    <string name="module_finger">Finger print Test</string>
    <string name="module_led">LED light Test</string>
    <string name="module_net">Network Test</string>
    <string name="module_usb">USB Test</string>
    <string name="module_voice">Audio Test</string>
    <string name="module_aging">Aging Test</string>
    <string name="module_version">Version Check</string>
    <string name="module_camera_aging">Camera Aging</string>
    <string name="module_key0">Keyboard 0 Test</string>
    <string name="module_key1">Keyboard 1 Test</string>
    <string name="module_key2">Keyboard 2 Test</string>
    <string name="module_sign">Sign Test</string>
    <string name="module_passport">Passport identification</string>
    <string name="back">return</string>
    <string name="take_photo_blur">Take Photo</string>
    <string name="display_test">Display Test</string>
    <string name="touch_test">Touch Test</string>
    <string name="idcard_test">ID card Test</string>
    <string name="nfc_test">NFC Test</string>
    <string name="close_device">Close device</string>
    <string name="connect_device">Device Connection</string>
    <string name="enroll_finger">Finger Enrollment</string>
    <string name="compare_finger">Finger Verification</string>
    <string name="clear_finger">Clear Database</string>
    <string name="close">Shut Down</string>
    <string name="start">Start Up</string>
    <string name="intranet_setting">Intranet Configuration</string>
    <string name="wifi_setting">WIFI Configuration</string>
    <string name="device_list">USB Device List</string>
    <string name="adjust_voice">Sound Adjustment</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="start_time">Start Time:</string>
    <string name="during_time">During Time:</string>
    <string name="self_test_num">Self-test Amount</string>
    <string name="id_card_module">ID card Module</string>
    <string name="hardware_tool">Hardware Test Tool</string>
    <string name="name">Test</string>
    <string name="change">Switch language</string>
    <string name="top_msg">Enter numbers on the password keypad</string>
    <string name="camera1">camera</string>
    <string name="camera2"> camera is detected, open it after selecting the serial number</string>
    <string name="no_camera">No camera detected</string>
    <string name="camera">Camera</string>
    <string name="open">Open</string>
    <string name="no_selecte_camera"> No camera selected</string>
    <string name="too_many_camera">Too many cameras selected</string>
    <string name="camera_selected"> Camera selected</string>
    <string name="local_ip">Local IP address：</string>
    <string name="get_ip_failed">Get local IP failed，Please check the network settings</string>
    <string name="complete">complete</string>
    <string name="restart">Restart</string>
    <string name="resSys">RestartSystem</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connection_ok">Connection succeeded </string>
    <string name="finger_ok"> Fingerprint module: normal &#160;&#160;</string>
    <string name="finger_failed">Fingerprint module: abnormal&#160;&#160;</string>
    <string name="idcard_ok"> IDCard module: normal &#160;&#160;</string>
    <string name="passport_ok"> Passport module: normal &#160;&#160;</string>
    <string name="passport_failed"> Passport module: abnormal &#160;&#160;</string>
    <string name="czcard_ok"> CZCard module: normal &#160;&#160;</string>
    <string name="idcard_failed"> IDCard module: abnormal&#160;&#160;</string>
    <string name="czcard_failed"> CZCard module: abnormal&#160;&#160;</string>
    <string name="camera_ok"> Camera module: normal &#160;&#160;</string>
    <string name="camera_failed">Camera module: abnormal &#160;&#160;</string>
    <string name="failed_time">times, abnormal&#160;&#160;</string>
    <string name="test"> Test：</string>
    <string name="times">&#160;times </string>
    <string name="camera_mouled">Camera module:  </string>
    <string name="stop1">stopping</string>
    <string name="connect_suc">Connect success</string>
    <string name="connect_failed">Connect failed</string>
    <string name="connect_first">Connect device first</string>
    <string name="self_test">self-inspection</string>
    <string name="self_test_idcard">ID card module</string>
    <string name="self_test_camera0">Camera 0</string>
    <string name="self_test_camera1">Camera 1</string>
    <string name="self_test_camera2">Camera 2</string>
    <string name="self_test_finger">Fingerprint module</string>
    <string name="self_test_ethernet">Is the wired network connected</string>
    <string name="self_test_wifi">Is the wireless network connected</string>
    <string name="self_test_keyboard">External password keyboard</string>
    <string name="self_test_tips">Note: The testing covers all modules, and there may be module inconsistencies between different products. Please review the testing results based on the actual product</string>
    <string name="self_test_confirm">Confirm</string>
    <string name="box_score_thresh">Box Confidence Threshold</string>
    <string name="box_un_clip_ratio">Box Size Ratio</string>
    <string name="app_permission">Get Camera Permission</string>
    <string name="storage_permission">Get Storage Permission</string>
    <string name="do_angle">Text Orientation Detection</string>
    <string name="ocr_identify">identify</string>
    <string name="ocr_clear">clear</string>
    <string name="ocr_add">add</string>
    <string name="ocr_delete">delete</string>
    <string name="ocr_result">result</string>
    <string name="ocr_result_tips">result</string>
    <string name="ocr_confirm">confirm</string>
    <string name="select_pic">select pic</string>
    <string name="take_pic">take pic</string>
    <string name="passport_num">Card Num</string>
    <string name="passport_birthday">Birthday</string>
    <string name="passport_endtime">End Time</string>
    <string name="camera_0">visible light</string>
    <string name="camera_1">infrared light</string>
    <string name="camera_2">OCR</string>
    <string name="memory">Memory Size:</string>
    <string name="storage">Storage Size:</string>
    <string name="system">System Version:</string>
    <string name="tips">Tips</string>
    <string name="loading">Loading…</string>
    <string name="excel_content">Do you need to export the results to Excel</string>
    <string name="file_path">File Path:</string>
    <string name="stop_test">Do you need to stop the test and restart the App?</string>
    <string name="test_time">Test time</string>
    <string name="test_times">Test times</string>
    <string name="test_camera">Camera module</string>
    <string name="test_finger">Finger module</string>
    <string name="test_cz">Cz card module</string>
    <string name="test_max2">Max2 card module</string>
    <string name="change_languages">languages</string>
    <string name="open_cn_ocr">Open Chinese OCR</string>
    <string name="open_aging_test">Open Aging Test</string>
    <string name="is_sec">This is secondary screen</string>
    <string name="open_device">Open Device</string>
    <string name="open_device_suc">Open Device Suc</string>
    <string name="open_device_fail">Open Device Fail</string>
    <string name="already_open_device">Already Open Device</string>
    <string name="close_device_suc">Close Device Suc</string>
    <string name="close_device_fail">Close Device Suc</string>
    <string name="already_close_device">Already Close Device</string>
    <string name="start_read">Start Read</string>
    <string name="start_read_suc">Start Read Suc</string>
    <string name="start_read_fail">Start Read Fail</string>
    <string name="stop_read">Stop Read</string>
    <string name="face_setting">Parameter Settings</string>
    <string name="setting_camera_id_1">camera1 index</string>
    <string name="setting_camera_id_2">camera2 index</string>
    <string name="setting_camera_id_3">camera3 index</string>
    <string name="setting_open_angle">angle check</string>
    <string name="setting_open_auto_focus">auto focus</string>
    <string name="setting_reverse_frame">reverse frame</string>
    <string name="setting_open_occlusion">occlus check</string>
    <string name="setting_open_eye">eye check</string>
    <string name="setting_open_diff">diff check</string>
    <string name="setting_camera1_rotation">camera1 rotation</string>
    <string name="setting_camera2_rotation">camera2 rotation</string>
    <string name="setting_camera3_rotation">camera3 rotation</string>
    <string name="setting_camera1_mirror">camera1 mirror</string>
    <string name="setting_camera2_mirror">camera2 mirror</string>
    <string name="setting_camera3_mirror">camera3 mirror</string>
    <string name="setting_camera1_flip">camera1 flip</string>
    <string name="setting_camera2_flip">camera2 flip</string>
    <string name="setting_camera3_flip">camera3 flip</string>
    <string name="setting_input1_rotation">input1 rotation</string>
    <string name="setting_input2_rotation">input2 rotation</string>
    <string name="setting_input3_rotation">input3 rotation</string>
    <string name="setting_input1_mirror">input1 mirror</string>
    <string name="setting_input2_mirror">input2 mirror</string>
    <string name="setting_input3_mirror">input3 mirror</string>
    <string name="setting_input1_flip">input1 flip</string>
    <string name="setting_input2_flip">inputa2 flip</string>
    <string name="setting_input3_flip">input3 flip</string>
    <string name="setting_open_full_camera">open full camera</string>
    <string name="setting_show_ir">show ir</string>
    <string name="setting_have_em">have em</string>
    <string name="setting_location">location</string>
    <string name="setting_face_frame">show face frame</string>
    <string name="setting_dark_light">dark light</string>
    <string name="setting_save">Save</string>
    <string name="setting_reset">Reset</string>
    <string name="setting">Setting</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_camera_v">Open Camera V</string>
    <string name="close_camera">Close Camera</string>
    <string name="liveness_detection">Liveness Detect</string>
    <string name="electrical">Electrical</string>
    <string name="take_pic_single">Take Single Pic</string>
    <string name="scan">scan</string>
    <string name="aging_test">Aging Test</string>
    <string name="setting_em_rotation">EM Rotaion</string>
    <string name="setting_em_angle">Rotation Angle </string>
    <string name="setting_open_led">open Led</string>
    <string name="setting_uvc_camera_no">uvc camera no</string>
    <string name="setting_cancel">Cancel</string>
</resources>